--- a/webStack/tomcat/Dockerfile
+++ b/webStack/tomcat/Dockerfile
@@ -14,7 +14,7 @@ RUN apt-get update -y && \
     mkdir -p /usr/share/desktop-directories
 
 RUN apt-get update -y && \
-    apt-get install -y --no-install-recommends lxterminal nano wget openssh-client rsync ca-certificates xdg-utils htop tar xzip gzip bzip2 zip unzip wget sudo && \
+    apt-get install -y --no-install-recommends lxterminal nano wget openssh-client rsync ca-certificates xdg-utils htop tar xzip gzip bzip2 zip unzip wget sudo nautilus && \
     rm -rf /var/lib/apt/lists
 
 RUN apt-get update -y && \
@@ -26,32 +26,28 @@ RUN apt-get update -y && \
     apt-get install -y --no-install-recommends default-jre default-jdk && \
     rm -rf /var/lib/apt/lists
 
-# tomat
-RUN wget -O tomcatSetup.zip https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.54/bin/apache-tomcat-9.0.54.zip
-RUN unzip tomcatSetup.zip
-RUN mv apache* /opt/tomcat
-RUN rm tomcatSetup.zip
-RUN chmod +x /opt/tomcat/bin/catalina.sh
-
 RUN groupadd --gid 1000 app && \
     useradd --home-dir /home/student/ --shell /bin/bash --uid 1000 --gid 1000 app && \
-    mkdir -p /home/student
-VOLUME /home/student
+    mkdir /home/student
+VOLUME /home/student/studentData
 
-RUN chown -R app:app /opt/tomcat
-
-#sql
+# sql
 RUN apt-get update -y && \
     apt-get install -y --no-install-recommends mysql-server && \
     rm -rf /var/lib/apt/lists
 
-RUN apt-get update -y && \
-    apt-get install -y --no-install-recommends nautilus && \
-    rm -rf /var/lib/apt/lists
+# tomat
+RUN wget -O tomcatSetup.zip https://dlcdn.apache.org/tomcat/tomcat-9/v9.0.54/bin/apache-tomcat-9.0.54.zip
+RUN unzip tomcatSetup.zip
+RUN mv apache* /home/student/tomcat
+RUN rm tomcatSetup.zip
+RUN chmod +x /home/student/tomcat/bin/catalina.sh
+
+RUN chown -R app:app /home/student/ /dev/stdout
 
 COPY --from=easy-novnc-build /bin/easy-novnc /usr/local/bin/
 COPY menu.xml /var/lib/openbox/debian-menu.xml
 COPY supervisord.conf /etc/
 EXPOSE 6000
 
-CMD ["sh", "-c", "chown app:app /home/student /dev/stdout && exec gosu app supervisord"]
+CMD ["sh", "-c", "chown app:app /home/student/studentData /dev/stdout && exec gosu app supervisord"]
