--- a/webStack/tomcat/supervisord.conf
+++ b/webStack/tomcat/supervisord.conf
@@ -29,9 +29,16 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
-[program:app]
+[program:tomcat]
 priority=1
 command=/home/student/tomcat/bin/catalina.sh start
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
+[program:mysql]
+priority=1
+command=sudo service mysql start
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
