--- a/codeStack/Dockerfile
+++ b/codeStack/Dockerfile
@@ -73,7 +73,9 @@ RUN chown -R student:student /home/student/ /dev/stdout
 RUN echo -n "student\nstudent" | passwd student
 RUN usermod -aG sudo student
 
-RUN apt-get install -y tint2
+RUN apt-get -y update && \
+    apt-get install -y tint2 && \
+    rm -rf /var/lib/apt/lists
 
 COPY --from=easy-novnc-build /bin/easy-novnc /usr/local/bin/
 COPY menu.xml /var/lib/openbox/debian-menu.xml
